--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <center><b><font color="#000000"><font size="+3">一般社団法人国際空手道連盟極真会館千葉県千葉支部船橋道場一道場生の未公認サイト跡地</font></font></b> <br>
-最終更新日2020.05.06 <br>
+最終更新日2020.05.07 <br>
 
 一般社団法人国際空手道連盟極真会館千葉県千葉支部船橋道場は千葉県船橋市に存在する空手道場です。 <br>
 Japanese pages only. <br>
@@ -28,15 +28,18 @@ Japanese pages only. <br>
 <p>
 <ul>
 <p>以下読み書き自由</p>
-  <li> <a href="http://www.z-z.jp/?gaikokudekurou/">雑談用掲示板、(読み書き自由ですがわが道場は一切関知いたしません,質問をされても一切回答いたしません)</a></li>
+  <li> 雑談用掲示板は利用者がいないため閉鎖しました</a></li>
+<hr width="100%" align="left">
 <p>以下読み込み自由</p>
-  <li> <a href="http://o.z-z.jp/?asukaken">連絡用掲示
-		  連絡用板(!!!最新情報はまずここで!!!・閲覧自由・投稿制限あり)</a></li>
+  <li> 連絡用掲示板は利用者がいないため閉鎖しました</a></li>
 <hr width="100%" align="left">
 <p>以下入場制限あり</p>
-  <li> <a href="http://b.z-z.jp/?karaimono">指導員用掲示板(入場制限あり)</a></li>
-</ul>
+<li> <a href="http://b.z-z.jp/?karaimono">旧指導員用掲示板(入場制限あり)下記掲示板に移転作業中</a></li>
 <hr width="100%" align="left">
+<p>以下入場制限あり</p>
+<li> <a href="https://teamroom.jp/team/3445/board/3693">指導員用掲示板(入場制限あり)移転先2020年5月7日以後こちらをご利用ください</a></li>
+<hr width="100%" align="left">
+</ul>
 <p>関連サイト</p>
   <p> </p>
   <p><a href="http://kyokushinmisaki.grupo.jp/">http://kyokushinmisaki.grupo.jp/</a>
