--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Japanese pages only. <br>
 一般社団法人国際空手道連盟極真会館オフィシャルサイト<br>
 (わが道場は「極真会館　千葉県船橋道場」として道場一覧に掲載されております）</p>
   <p> </p>
-  <p><a href="http://kyokushin-kansai.com/index.html">http://kyokushin-kansai.com/index.html</a>
+  <p><a href="http://kyokushin-kansai.com/index.html">http://kyokushin-kansai.com/index.html/</a>
   <br>
 わが道場が「管轄」支部（道場）として所属する関西総本部の公式ページです<br>
   </p>
