changed BBS moving plan

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Japanese pages only. <br>
 <li> <a href="http://b.z-z.jp/?karaimono">旧指導員用掲示板(入場制限あり)下記掲示板に移転作業中</a></li>
 <hr width="100%" align="left">
 <p>以下入場制限あり</p>
-<li> <a href="https://teamroom.jp/team/3445/board/3693">指導員用掲示板(入場制限あり)移転先2020年5月7日以後こちらをご利用ください</a></li>
+<li> <a href="https://teamroom.jp/team/3445/board/3693">指導員用掲示板(入場制限あり)移転先2020年11月7日以後こちらをご利用いただく予定(移転状況によっては旧掲示板を存続)</a></li>
 <hr width="100%" align="left">
 </ul>
 <p>関連サイト</p>
