BBS comment changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Japanese pages only. <br>
   <li> 連絡用掲示板は利用者がいないため閉鎖しました</a></li>
 <hr width="100%" align="left">
 <p>以下入場制限あり</p>
-<li> <a href="http://b.z-z.jp/?karaimono">旧指導員用掲示板(入場制限あり)下記掲示板に移転作業中</a></li>
+<li> <a href="http://b.z-z.jp/?karaimono">旧指導員用掲示板</a></li>
 <hr width="100%" align="left">
 </ul>
 <p>関連サイト</p>
